--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      LOGIN: ${{secrets.SD_USER}}
+      PASSWORD: ${{secrets.SD_PASSWORD}}
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
@@ -28,5 +32,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Running tests
-      run: mvn clean test
+      run: mvn clean test -Duser=$LOGIN -Dpassword=$PASS
       
