--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,5 +32,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Running tests
-      run: mvn clean test -Duser=$LOGIN -Dpassword=$PASS
+      run: mvn clean test -Duser=$LOGIN -Dpassword=$PASSWORD
       
